tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@kwargs_missing_comma.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/kwargs_missing_comma.txt
---
error: Found identifier but expected ,.
 --> kwargs_missing_comma.txt:1:11
  |
1 | {{ foo(a=1 b=2) }}
  |            ^
